代码结构调整， 增加事件节点， 改为全局长事务， 增加并发处理, 并行，包含网关实现逻辑优化